# Phone-Assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.py  main.py  write_md.py
